--- a/src/app/components/sales/sales.component.html
+++ b/src/app/components/sales/sales.component.html
@@ -1,10 +1,17 @@
 <html>
     <body>
-        <mat-card class="cardTitle">
-            <mat-card-title class="centered colorfull">Quoting List</mat-card-title>
-            <mat-card-content>
-                <app-sales-list [quotes]="quotes"></app-sales-list>
-            </mat-card-content>
-        </mat-card>
+        <div class="salesPage">
+            <mat-card class="salesList"
+            [class.mat-elevation-z0]=true>
+                <mat-card-title class="title centered colorfull">Quoting List</mat-card-title>
+                <div class="table">
+                    <mat-card class="listCont">
+                        <div class="content">
+                            <app-sales-list [quotes]="quotes"></app-sales-list>
+                        </div>
+                    </mat-card>
+                </div>
+            </mat-card>
+        </div>
     </body>
 </html>
