--- a/src/app/components/sales-list/sales-list.component.html
+++ b/src/app/components/sales-list/sales-list.component.html
@@ -21,7 +21,7 @@
             <div class="qli title">Total: </div>    
         </div>  
         <div
-        *ngFor="let qli of quote.qliList; let j = index">
+        *ngFor="let qli of quote.quoteListItems; let j = index">
                 <div class="container"
                 >
                     <div class="qli">{{qli.product.name}}</div>
