--- a/src/app/components/sales-list/sales-list.component.html
+++ b/src/app/components/sales-list/sales-list.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="qli">{{quote.client.ci}}
             </div>
-            <div class="qli">{{quote.client.lastname +" " + quote.client.name}}</div>
+            <div class="qli">{{quote.client.lastName +" " + quote.client.name}}</div>
             <div class="qli">{{quote.date}}</div>
         </div>
         <div
