--- a/src/app/components/sales-list/sales-list.component.html
+++ b/src/app/components/sales-list/sales-list.component.html
@@ -27,7 +27,7 @@
                     <div class="qli">{{qli.product.name}}</div>
                     <div class="qli">{{qli.price}}</div>
                     <div class="qli">{{qli.quantity}}</div>
-                    <div class="qli">{{qli.price*qli.quantity}}</div>
+                    <div class="qli">{{discountProduct(qli.price, qli.quantity)}}</div>
                 </div>
         </div>
         <div
